--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 
-  <title>Brandon Carmona Resume</title>
+  <title>Brandon Carmona's Resume</title>
 
 </head>
 
